--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <script>
     const acceptedLocalesByPriority = ['en-gb', 'de-de'];
-    const originalLocation = "index.html";
+    const originalLocation = "manual/main/index.html";
 
     function getLangLocale()
     {
