fix: use 404 layout

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <script>
     const acceptedLocalesByPriority = ['en-gb', 'de-de'];
-    const originalLocation = "404.html";
+    const originalLocation = "manual/main/404.html";
 
     function getLangLocale()
     {
